--- a/BackFight/app/src/main/res/layout/activity_rules.xml
+++ b/BackFight/app/src/main/res/layout/activity_rules.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/grid_background"
     tools:context="com.studio.jarn.backfight.RulesActivity">
 
     <TextView
@@ -11,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Rules"
+        android:textColor="@color/btn_TextColor"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
@@ -27,6 +29,8 @@
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:text="@string/Back"
+        android:background="@color/btn_BackgroundColor"
+        android:textColor="@color/btn_TextColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent" />
 
@@ -34,5 +38,6 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/btn_TextColor"
         android:text="Måske skal det laves som et list view? God ide ?" />
 </android.support.constraint.ConstraintLayout>
