--- a/BackFight/app/src/main/res/layout/activity_new_game.xml
+++ b/BackFight/app/src/main/res/layout/activity_new_game.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/grid_background"
     tools:context="com.studio.jarn.backfight.NewGameActivity">
 
     <android.support.constraint.Guideline
@@ -17,18 +18,18 @@
         android:id="@+id/btnCreateNewGame"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginTop="0dp"
-        android:background="@drawable/wall128"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
         android:text="@string/Create"
-        android:textColor="@color/colorPrimary"
+        android:background="@color/btn_BackgroundColor"
+        android:textColor="@color/btn_TextColor"
         android:textSize="24sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/guidelineVertical"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        android:layout_marginBottom="0dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
         app:layout_constraintVertical_bias="0.0" />
 
@@ -43,13 +44,13 @@
         android:id="@+id/btnJoinNewGame"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="0dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginTop="0dp"
-        android:background="@drawable/floor128"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
         android:text="@string/Join"
-        android:textColor="@color/colorPrimary"
+        android:background="@color/btn_BackgroundColor"
+        android:textColor="@color/btn_TextColor"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="@+id/guidelineVertical"
@@ -67,6 +68,8 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/Back"
+        android:background="@color/btn_BackgroundColor"
+        android:textColor="@color/btn_TextColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintLeft_toLeftOf="parent"
