--- a/BackFight/app/src/main/res/layout/activity_settings.xml
+++ b/BackFight/app/src/main/res/layout/activity_settings.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/grid_background"
     tools:context="com.studio.jarn.backfight.SettingsActivity">
 
     <Button
@@ -13,6 +14,8 @@
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:text="@string/Back"
+        android:background="@color/btn_BackgroundColor"
+        android:textColor="@color/btn_TextColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent" />
 
@@ -23,6 +26,8 @@
         android:layout_marginBottom="8dp"
         android:layout_marginRight="8dp"
         android:text="@string/Save"
+        android:background="@color/btn_BackgroundColor"
+        android:textColor="@color/btn_TextColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
@@ -36,6 +41,7 @@
         android:layout_marginTop="8dp"
         android:text="@string/Settings"
         android:textSize="18sp"
+        android:textColor="@color/btn_TextColor"
         app:layout_constraintBottom_toTopOf="@+id/guidelineTitle"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
