--- a/BackFight/app/src/main/res/layout/activity_rules.xml
+++ b/BackFight/app/src/main/res/layout/activity_rules.xml
@@ -8,22 +8,22 @@
     tools:context="com.studio.jarn.backfight.RulesActivity">
 
     <TextView
-        android:id="@+id/tvwRules"
+        android:id="@+id/activity_rules_tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
         android:text="@string/Rules"
         android:textColor="@color/btn_TextColor"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btnBackRules"
+        android:id="@+id/activity_rules_btn_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -34,10 +34,4 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/btn_TextColor"
-        android:text="Måske skal det laves som et list view? God ide ?" />
 </android.support.constraint.ConstraintLayout>
