--- a/BackFight/app/src/main/res/layout/activity_settings.xml
+++ b/BackFight/app/src/main/res/layout/activity_settings.xml
@@ -8,7 +8,7 @@
     tools:context="com.studio.jarn.backfight.SettingsActivity">
 
     <Button
-        android:id="@+id/btnBackSettings"
+        android:id="@+id/activity_settings_btn_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -20,7 +20,7 @@
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <Button
-        android:id="@+id/btnSaveSettings"
+        android:id="@+id/activity_settings_btn_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -32,7 +32,7 @@
         app:layout_constraintRight_toRightOf="parent" />
 
     <TextView
-        android:id="@+id/tvwSettings"
+        android:id="@+id/activity_settings_tv_title"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
@@ -40,9 +40,9 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/Settings"
-        android:textSize="18sp"
         android:textColor="@color/btn_TextColor"
-        app:layout_constraintBottom_toTopOf="@+id/guidelineTitle"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/activity_mainMenu_gl_horizotalTitle"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -50,7 +50,7 @@
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/guidelineTitle"
+        android:id="@+id/activity_mainMenu_gl_horizotalTitle"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.1511254" />
 </android.support.constraint.ConstraintLayout>
