--- a/BackFight/app/src/main/res/layout/activity_load_game.xml
+++ b/BackFight/app/src/main/res/layout/activity_load_game.xml
@@ -8,7 +8,7 @@
     tools:context="com.studio.jarn.backfight.LoadGameActivity">
 
     <Button
-        android:id="@+id/btnBackLoadGame"
+        android:id="@+id/activity_loadGame_btn_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -20,7 +20,7 @@
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <Button
-        android:id="@+id/btnLoadLoadGame"
+        android:id="@+id/activity_loadGame_btn_loadGame"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -32,7 +32,7 @@
         app:layout_constraintRight_toRightOf="parent" />
 
     <TextView
-        android:id="@+id/tvwLoadGame"
+        android:id="@+id/activity_loadGame_tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
