--- a/BackFight/app/src/main/res/layout/activity_new_game.xml
+++ b/BackFight/app/src/main/res/layout/activity_new_game.xml
@@ -10,12 +10,12 @@
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/guidelineVertical"
+        android:id="@+id/activity_mainMenu_gl_vertical"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.5" />
 
     <Button
-        android:id="@+id/btnCreateNewGame"
+        android:id="@+id/activity_newGame_btn_create"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginLeft="8dp"
@@ -26,22 +26,22 @@
         android:textColor="@color/btn_TextColor"
         android:textSize="24sp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical"
+        app:layout_constraintRight_toLeftOf="@+id/activity_mainMenu_gl_vertical"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
+        app:layout_constraintBottom_toTopOf="@+id/activity_mainMenu_gl_horizontal"
         app:layout_constraintVertical_bias="0.0" />
 
     <android.support.constraint.Guideline
-        android:id="@+id/guidelineHorizontal"
+        android:id="@+id/activity_mainMenu_gl_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.8" />
 
     <Button
-        android:id="@+id/btnJoinNewGame"
+        android:id="@+id/activity_newGame_btn_join"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
@@ -53,14 +53,14 @@
         android:textColor="@color/btn_TextColor"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="@+id/guidelineVertical"
+        app:layout_constraintLeft_toLeftOf="@+id/activity_mainMenu_gl_vertical"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/btnBackNewGame"
+        android:id="@+id/activity_newGame_btn_back"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
@@ -73,7 +73,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical"
-        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal"
+        app:layout_constraintRight_toLeftOf="@+id/activity_mainMenu_gl_vertical"
+        app:layout_constraintTop_toTopOf="@+id/activity_mainMenu_gl_horizontal"
         app:layout_constraintVertical_bias="0.0" />
 </android.support.constraint.ConstraintLayout>
