--- a/BackFight/app/src/main/res/layout/activity_splash.xml
+++ b/BackFight/app/src/main/res/layout/activity_splash.xml
@@ -8,7 +8,7 @@
     tools:context="com.studio.jarn.backfight.SplashActivity">
 
     <TextView
-        android:id="@+id/tvwBackfight"
+        android:id="@+id/activity_splash_tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
