--- a/BackFight/app/src/main/res/layout/activity_new_game.xml
+++ b/BackFight/app/src/main/res/layout/activity_new_game.xml
@@ -52,28 +52,27 @@
         android:background="@color/btn_BackgroundColor"
         android:textColor="@color/btn_TextColor"
         android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="@+id/activity_mainMenu_gl_vertical"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintBottom_toTopOf="@+id/activity_mainMenu_gl_horizontal" />
 
     <Button
         android:id="@+id/activity_newGame_btn_back"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
         android:layout_marginTop="8dp"
-        android:text="@string/Back"
         android:background="@color/btn_BackgroundColor"
+        android:text="@string/Back"
         android:textColor="@color/btn_TextColor"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/activity_mainMenu_gl_vertical"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/activity_mainMenu_gl_horizontal"
         app:layout_constraintVertical_bias="0.0" />
 </android.support.constraint.ConstraintLayout>
