--- a/BackFight/app/src/main/res/layout/activity_load_game.xml
+++ b/BackFight/app/src/main/res/layout/activity_load_game.xml
@@ -13,6 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:text="@string/Back"
         android:background="@color/btn_BackgroundColor"
         android:textColor="@color/btn_TextColor"
@@ -25,6 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginEnd="8dp"
         android:text="@string/Load"
         android:background="@color/btn_BackgroundColor"
         android:textColor="@color/btn_TextColor"
