--- a/BackFight/app/src/main/res/values/colors.xml
+++ b/BackFight/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="grid_background">#000000</color>
 
     <color name="black_overlay">#66000000</color>
+
+    <color name="fragment_listBackground">#bfa074</color>
 </resources>
