--- a/BackFight/app/src/main/res/layout/game_board_activity.xml
+++ b/BackFight/app/src/main/res/layout/game_board_activity.xml
@@ -22,7 +22,7 @@
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/guideline"
+        android:id="@+id/game_board_activity_guideline_fragment"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.75"
         tools:layout_editor_absoluteY="0dp"
