--- a/BackFight/app/src/main/res/layout/activity_lobby.xml
+++ b/BackFight/app/src/main/res/layout/activity_lobby.xml
@@ -46,4 +46,50 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <RadioGroup
+        android:id="@+id/activity_lobby_rg_gridType"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@color/btn_BackgroundColor"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/activity_lobby_tv_title">
+
+
+        <RadioButton
+            android:id="@+id/activity_lobby_rb_default"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/btn_BackgroundColor"
+            android:checked="true"
+            android:text="@string/lobby_default"
+            android:textColor="@color/btn_TextColor" />
+
+        <RadioButton
+            android:id="@+id/activity_lobby_rb_maze"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/btn_BackgroundColor"
+            android:text="@string/lobby_maze"
+            android:textColor="@color/btn_TextColor" />
+
+    </RadioGroup>
+
+    <NumberPicker
+        android:id="@+id/activity_lobby_np_mapSize"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@color/btn_BackgroundColor"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/activity_lobby_rg_gridType" />
+
+
 </android.support.constraint.ConstraintLayout>
