Opdated the splash scene with icon Made the rule activity, and new rules can easily be added. Seach function in rules is TODO, but will be inplemented later.

--- a/BackFight/app/src/main/res/layout/activity_splash.xml
+++ b/BackFight/app/src/main/res/layout/activity_splash.xml
@@ -7,6 +7,22 @@
     android:background="@color/start_BackgroundColor"
     tools:context="com.studio.jarn.backfight.SplashActivity">
 
+    <ImageView
+        android:id="@+id/activity_splash_img_title"
+        android:layout_width="222dp"
+        android:layout_height="169dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:contentDescription="@string/all_icon"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.35000002"
+        app:srcCompat="@mipmap/icon" />
+
     <TextView
         android:id="@+id/activity_splash_tv_title"
         android:layout_width="wrap_content"
@@ -14,12 +30,15 @@
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="0dp"
         android:text="@string/app_name"
         android:textColor="@color/start_TextColor"
         android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/activity_splash_img_title"
+        app:layout_constraintVertical_bias="0.0" />
+
 </android.support.constraint.ConstraintLayout>
