--- a/BackFight/app/src/main/res/layout/activity_rules.xml
+++ b/BackFight/app/src/main/res/layout/activity_rules.xml
@@ -12,27 +12,119 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/mainMenu_rules"
         android:textColor="@color/btn_TextColor"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/activity_rules_gl_seachHight"
+        app:layout_constraintLeft_toLeftOf="@+id/activity_rules_gl_vertical"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/activity_rules_btn_back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:background="@color/btn_BackgroundColor"
         android:text="@string/all_back"
         android:textColor="@color/btn_TextColor"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/activity_rules_gl_vertical"
+        app:layout_constraintTop_toTopOf="@+id/activity_rules_gl_backHight" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/activity_rules_gl_vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.3"
+        tools:layout_editor_absoluteX="178dp"
+        tools:layout_editor_absoluteY="0dp" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/activity_rules_gl_top"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.0" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/activity_rules_gl_backHight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.8"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="249dp" />
+
+    <ListView
+        android:id="@+id/activity_rules_lw_listOfRules"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="7dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/activity_rules_gl_backHight"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/activity_rules_gl_vertical"
+        app:layout_constraintTop_toTopOf="@+id/activity_rules_gl_seachHight" />
+
+    <EditText
+        android:id="@+id/activity_rules_et_search"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:hint="@string/rules_search"
+        android:imeOptions="flagNoExtractUi"
+        android:inputType="textVisiblePassword"
+        android:scrollbars="none"
+        android:selectAllOnFocus="true"
+        android:textColor="@color/btn_TextColor"
+        android:textColorHint="@color/btn_TextColorHint"
+        android:textColorLink="@color/btn_TextColor"
+        app:layout_constraintBottom_toTopOf="@+id/activity_rules_gl_seachHight"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/activity_rules_gl_vertical"
+        app:layout_constraintTop_toTopOf="@+id/activity_rules_gl_top" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/activity_rules_gl_seachHight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="57dp" />
+
+    <TextView
+        android:id="@+id/activity_rules_tv_details"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:scrollbars="vertical"
+        android:text="@string/rules_rulesDetails"
+        android:textColor="@color/btn_TextColor"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="@+id/activity_rules_gl_vertical"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/activity_rules_gl_seachHight" />
 
 </android.support.constraint.ConstraintLayout>
