--- a/BackFight/app/src/main/res/values/colors.xml
+++ b/BackFight/app/src/main/res/values/colors.xml
@@ -3,15 +3,17 @@
     <color name="colorPrimary">#3f51b5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimaryAccent">#ffd800</color>
     <color name="grid_background">#000000</color>
 
     <color name="start_BackgroundColor">#f3f20404</color>
     <color name="start_TextColor">#ffd700</color>
 
     <color name="btn_BackgroundColor">#f3f20404</color>
-    <color name="btn_TextColor">#ffd700</color>
+    <color name="btn_TextColor">#ffd800</color>
 
     <color name="black_overlay">#66000000</color>
 
     <color name="fragment_listBackground">#bfa074</color>
+    <color name="btn_TextColorHint">#d0b000</color>
 </resources>
